# aho-corasick-search

./: .gitignore  CMakeLists.txt  README.md
examples/: example.cpp
src/: aho_corasick.cc  aho_corasick.h  any.h  uppercase_iterator.h
tests/: test_basic.cpp
